@@ -1,4 +1,6 @@
 0.2.7:
+  - Support for GZip compression.
+  - Require google-ads-common 0.6.1 or later from now on.
 
 0.2.6:
   - Support for v201111.
